Remove coloured text from toasts due to contrast issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -167,10 +167,6 @@ a.social:focus {
     border-width:2px !important;
 }
 
-.text-green {
-    color: #1F7F35;
-}
-
 /* all links */
 
 a {
